Adiciona endpoint de status
